--- a/20211122進度.md
+++ b/20211122進度.md
@@ -1,3 +1,3 @@
 #     前幾周的進度忘記放上來
 ##   這一周(11/22~11/28)的進度是完成系統文件
-![image] https://github.com/JIA-JA/111502-case/blob/main/github-images/%E8%9E%A2%E5%B9%95%E6%93%B7%E5%8F%96%E7%95%AB%E9%9D%A2%202021-11-24%20220020.jpg
+![image] (https://github.com/JIA-JA/111502-case/blob/main/github-images/%E8%9E%A2%E5%B9%95%E6%93%B7%E5%8F%96%E7%95%AB%E9%9D%A2%202021-11-24%20220020.jpg)
