--- a/20211122進度.md
+++ b/20211122進度.md
@@ -1,3 +1,5 @@
 #     前幾周的進度忘記放上來
+##   之前是討論主題及系統功能居多，目前是確定做寵物app(叫狗pet),而我們主要特色是跟寵物殯葬相關的功能，其他像是發文區、保健區、領養區，皆是我們app所處理的範圍之內。
 ##   這一周(11/22~11/28)的進度是完成系統文件
 ![image](https://github.com/JIA-JA/111502-case/blob/main/github-images/%E8%9E%A2%E5%B9%95%E6%93%B7%E5%8F%96%E7%95%AB%E9%9D%A2%202021-11-24%20220020.jpg)
+
