--- a/20211004進度.md
+++ b/20211004進度.md
@@ -1,6 +1,7 @@
-#   確認功能為此五個(10/4~10/10)
+#   確認功能為此六個(10/4~10/10)
 ### 1.動態消息
 ### 2.保健區
-### 3.殯葬服務
-### 4.領養區
-### 5.個人資料設定
+### 3.最新消息
+### 4.殯葬服務
+### 5.領養區
+### 6.個人資料設定
