--- a/20211018進度.md
+++ b/20211018進度.md
@@ -1,1 +1,3 @@
-#   這周是討論使用者客群的對象是誰以及寵物保健裡面的功能會記錄哪些事情(10/18~10/24)
+#   這周是討論使用者客群的對象是誰?   飼養老寵物的飼主
+#   以及寵物保健裡面的功能會記錄哪些事情?   定期接種疫苗、身體狀態、飲食
+##  (10/18~10/24)
